# expo-push-notification-api-rust-on-lamda

./: Cargo.toml
src/: http_handler.rs
