[package]
name = "expo-push-notification-api-rust-on-lamda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "1.0.2"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
http = "1.4.0"

# Expo & Supabase
expo_push_notification_client = "2.0.0"
supabase_rs = "0.5.0"

# AWS SDK
aws-config = "1.1.10"
aws-sdk-ssm = "1.20.0"
thiserror = "2.0.17"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
